--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.16.0",
+    "firestore": "^1.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
