--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "firebase": "^9.16.0",
     "firestore": "^1.1.6",
     "react": "^18.2.0",
